# gtkdialog

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.og  README  aclocal.m4  config.h  config.status  configure  gtkdialog.spec  switch-gcc-back.sh  switch-to-gcc8.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile  Makefile.in
data/icons/: Makefile  Makefile.in
data/icons/hicolor/: Makefile  Makefile.in
data/icons/hicolor/32x32/: Makefile  Makefile.in
data/icons/hicolor/32x32/apps/: Makefile  Makefile.in
debian/: changelog  control  files  gtkdialog.1  gtkdialog.substvars  rules
debian/.debhelper/bucket/: index
debian/.debhelper/gtkdialog/: dbgsym-build-ids
debian/.debhelper/gtkdialog/dbgsym-root/DEBIAN/: control  md5sums
debian/gtkdialog/DEBIAN/: control  md5sums
debian/gtkdialog/usr/share/doc/gtkdialog/examples/gtk2/examples/text/: text-test
doc/: Makefile  Makefile.in  gtkdialog.info  gtkdialog.texi  version.texi
examples/gtk2/examples/button/: DIALOG  PLAYLIST
examples/gtk2/examples/list/: list_actions
examples/gtk3/examples/miscellaneous/: show_and_hide
src/: Makefile  Makefile.in  automaton.c  gtkdialog
src/.deps/: actions.Po  attributes.Po  automaton.Po  glade_support.Po  gtkdialog.Po  gtkdialog_lexer.Po  gtkdialog_parser.Po  printing.Po  signals.Po  stack.Po  stringman.Po  tag_attributes.Po  variables.Po  widget_button.Po  widget_checkbox.Po  widget_colorbutton.Po  widget_combobox.Po  widget_comboboxtext.Po  widget_edit.Po  widget_entry.Po  widget_eventbox.Po  widget_expander.Po  widget_fontbutton.Po  widget_frame.Po  widget_hbox.Po  widget_hscale.Po  widget_hseparator.Po  widget_list.Po  widget_menubar.Po  widget_menuitem.Po  widget_notebook.Po  widget_pixmap.Po  widget_progressbar.Po  widget_radiobutton.Po  widget_spinbutton.Po  widget_statusbar.Po  widget_table.Po  widget_terminal.Po  widget_text.Po  widget_timer.Po  (+4 more)
