SUBDIRS=src doc data

EXTRA_DIST = \
	autogen.sh \
	install.iss pango.modules pango.aliases gdk-pixbuf.loaders \
	examples/gtk2/reference/* \
	examples/gtk3/reference/* \
	examples/gtk2/examples/button/* \
	examples/gtk2/examples/checkbox/* \
	examples/gtk2/examples/colorbutton/* \
	examples/gtk2/examples/combobox/* \
	examples/gtk2/examples/comboboxentry/* \
	examples/gtk2/examples/comboboxtext/* \
	examples/gtk2/examples/demoscene/* \
	examples/gtk2/examples/edit/* \
	examples/gtk2/examples/entry/* \
	examples/gtk2/examples/eventbox/* \
	examples/gtk2/examples/expander/* \
	examples/gtk2/examples/fontbutton/* \
	examples/gtk2/examples/frame/* \
	examples/gtk2/examples/glade/* \
	examples/gtk2/examples/hbox/* \
	examples/gtk2/examples/hscale/* \
	examples/gtk2/examples/hseparator/* \
	examples/gtk2/examples/list/* \
	examples/gtk2/examples/menu/* \
	examples/gtk2/examples/menubar/* \
	examples/gtk2/examples/menuitem/* \
	examples/gtk2/examples/menuitemseparator/* \
	examples/gtk2/examples/miscellaneous/* \
	examples/gtk2/examples/notebook/* \
	examples/gtk2/examples/pixmap/* \
	examples/gtk2/examples/pfeme/* \
	examples/gtk2/examples/pfontview/* \
	examples/gtk2/examples/playmusic/* \
	examples/gtk2/examples/progressbar/* \
	examples/gtk2/examples/radiobutton/* \
	examples/gtk2/examples/spinbutton/* \
	examples/gtk2/examples/statusbar/* \
	examples/gtk2/examples/table/* \
	examples/gtk2/examples/terminal/* \
	examples/gtk2/examples/text/* \
	examples/gtk2/examples/timer/* \
	examples/gtk2/examples/togglebutton/* \
	examples/gtk2/examples/tree/* \
	examples/gtk2/examples/vbox/* \
	examples/gtk2/examples/vscale/* \
	examples/gtk2/examples/vseparator/* \
	examples/gtk2/examples/window/* \
		examples/gtk3/examples/button/* \
	examples/gtk3/examples/checkbox/* \
	examples/gtk3/examples/colorbutton/* \
	examples/gtk3/examples/combobox/* \
	examples/gtk3/examples/comboboxentry/* \
	examples/gtk3/examples/comboboxtext/* \
	examples/gtk3/examples/demoscene/* \
	examples/gtk3/examples/edit/* \
	examples/gtk3/examples/entry/* \
	examples/gtk3/examples/eventbox/* \
	examples/gtk3/examples/expander/* \
	examples/gtk3/examples/fontbutton/* \
	examples/gtk3/examples/frame/* \
	examples/gtk3/examples/glade/* \
	examples/gtk3/examples/hbox/* \
	examples/gtk3/examples/hscale/* \
	examples/gtk3/examples/hseparator/* \
	examples/gtk3/examples/list/* \
	examples/gtk3/examples/menu/* \
	examples/gtk3/examples/menubar/* \
	examples/gtk3/examples/menuitem/* \
	examples/gtk3/examples/menuitemseparator/* \
	examples/gtk3/examples/miscellaneous/* \
	examples/gtk3/examples/notebook/* \
	examples/gtk3/examples/pixmap/* \
	examples/gtk3/examples/pfeme/* \
	examples/gtk3/examples/pfontview/* \
	examples/gtk3/examples/playmusic/* \
	examples/gtk3/examples/progressbar/* \
	examples/gtk3/examples/radiobutton/* \
	examples/gtk3/examples/spinbutton/* \
	examples/gtk3/examples/statusbar/* \
	examples/gtk3/examples/table/* \
	examples/gtk3/examples/terminal/* \
	examples/gtk3/examples/text/* \
	examples/gtk3/examples/timer/* \
	examples/gtk3/examples/togglebutton/* \
	examples/gtk3/examples/tree/* \
	examples/gtk3/examples/vbox/* \
	examples/gtk3/examples/vscale/* \
	examples/gtk3/examples/vseparator/* \
	examples/gtk3/examples/window/*
